--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-repo",
+  "name": "shadcn-dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,21 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-hook/window-size": "^3.1.1",
+    "@tanstack/react-table": "^8.11.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.424.0",
-    "next": "14.2.5",
-    "next-themes": "^0.3.0",
+    "clsx": "^2.1.0",
+    "input-otp": "^1.2.4",
+    "lucide-react": "^0.306.0",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-hook-form": "^7.52.2",
+    "recharts": "^2.10.3",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7",
+    "window-size": "^1.1.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.3.0",
+    "tailwindcss-debug-screens": "^2.2.1",
+    "typescript": "^5"
   }
 }
